reverting pom and travis.yml files back to the way they were